# storage

./: .gitignore  index.html
121703/Glebchanskiy/lab1/: task5_find_files
121703/ardonplay/: 1.c  5.sh
NM/: lb1_sin.py
OS/121703/Glebchanskiy/lab1/: task4_args_output  task7_calculate_size
OS/121703/ardonplay/lab1/: 1.c  4.cpp  4.out  4.sh  4Output  5.sh  6.sh  7.sh  7.txt  file  test.txt
OS/lab1/: 4.cpp  5.sh  6.sh  task4_args_output  task6_build_cpp
OS/lab2/: part0.cpp  part1.cpp  part2.cpp
OS/lab2/Egor's(var3,17)/individual/: fill_with_hash.sh  indv  main.cpp
OS/lab2/Egor's(var3,17)/individual/dir1/: file1.txt  file10.txt  file11.txt  file12.txt  file13.txt  file14.txt  file15.txt  file16.txt  file17.txt  file18.txt  file19.txt  file2.txt  file3.txt  file31.txt  file32.txt  file33.txt  file34.txt  file35.txt  file36.txt  file37.txt  file38.txt  file39.txt  file4.txt  file40.txt  file41.txt  file42.txt  (+13 more)
OS/lab2/Egor's(var3,17)/lab2/: part0  part0.cpp  part2  part2.cpp
OS/lab2/ardonplay/ex1/: CMakeLists.txt  main.cpp  test.cpp
OS/lab2/ardonplay/ex2/: CMakeLists.txt
OS/lab2/glebchanskiy/: CMakeLists.txt  main.cpp
OS/lab3/: CMakeLists.txt  main.cpp  test.cpp
OS/lab3/egor/: functions.h  logger.h  logtime.h  main.cpp  point.h  run  signal.h  solver.h
OS/lab3/mut/: CMakeLists.txt  main.cpp
OS/lab3/mut/src/: CMakeLists.txt  dinner.cpp  dinner.h  fork.cpp  fork.h  philosopher.cpp  philosopher.h
OS/lab3/sem/: Philosopher.cpp  Philosopher.h  main.cpp  run
OS/lab3/sem/src/: CMakeLists.txt  dinner.cpp  dinner.h  philosopher.cpp  philosopher.h
(+39 files in other folders)
